feat: added 2fa activation
